gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CORDER
    CORIZQ

Grammar

Rule 0     S' -> init
Rule 1     init -> funciones_structs
Rule 2     funciones_structs -> funciones_structs funcion_struct
Rule 3     funciones_structs -> funcion_struct
Rule 4     funcion_struct -> funcion
Rule 5     funcion -> FN ID PIZQ PDER bloque
Rule 6     bloque -> LLAVEIZQ LLAVEDER
Rule 7     bloque -> LLAVEIZQ instrucciones LLAVEDER
Rule 8     instrucciones -> instrucciones instruccion
Rule 9     instrucciones -> instruccion
Rule 10    instruccion -> print PTCOMA
Rule 11    instruccion -> declaracion PTCOMA
Rule 12    instruccion -> asignacion PTCOMA
Rule 13    instruccion -> if_i
Rule 14    print -> PRINTLN NOT PIZQ expresion PDER
Rule 15    declaracion -> LET MUT ID DOBLEPT tipo_dato IGUAL expresion
Rule 16    declaracion -> LET ID DOBLEPT tipo_dato IGUAL expresion
Rule 17    declaracion -> LET MUT ID IGUAL expresion
Rule 18    declaracion -> LET ID IGUAL expresion
Rule 19    asignacion -> ID IGUAL expresion
Rule 20    if_i -> IF expresion bloque else
Rule 21    else -> ELSE if_i
Rule 22    else -> ELSE bloque
Rule 23    else -> empty
Rule 24    empty -> <empty>
Rule 25    expresion -> MENOS expresion
Rule 26    expresion -> expresion MAS expresion
Rule 27    expresion -> expresion MENOS expresion
Rule 28    expresion -> expresion MULTIPLICACION expresion
Rule 29    expresion -> expresion DIVISION expresion
Rule 30    expresion -> expresion MODULO expresion
Rule 31    expresion -> I64 DOBLEPT DOBLEPT POW PIZQ expresion COMA expresion PDER
Rule 32    expresion -> F64 DOBLEPT DOBLEPT POWF PIZQ expresion COMA expresion PDER
Rule 33    expresion -> PIZQ expresion PDER
Rule 34    expresion -> expresion MAYOR expresion
Rule 35    expresion -> expresion MENOR expresion
Rule 36    expresion -> expresion MAYORIGUAL expresion
Rule 37    expresion -> expresion MENORIGUAL expresion
Rule 38    expresion -> expresion IGUALIGUAL expresion
Rule 39    expresion -> expresion DIFERENTE expresion
Rule 40    expresion -> expresion AND expresion
Rule 41    expresion -> expresion OR expresion
Rule 42    expresion -> NOT expresion
Rule 43    expresion -> tostring
Rule 44    expresion -> as
Rule 45    expresion -> if_e
Rule 46    tostring -> expresion PUNTO TOSTRING PIZQ PDER
Rule 47    tostring -> expresion PUNTO TOOWNED PIZQ PDER
Rule 48    as -> expresion AS I64
Rule 49    as -> expresion AS F64
Rule 50    if_e -> IF expresion LLAVEIZQ expresion LLAVEDER
Rule 51    if_e -> IF expresion LLAVEIZQ expresion LLAVEDER ELSE LLAVEIZQ expresion LLAVEDER
Rule 52    if_e -> IF expresion LLAVEIZQ expresion LLAVEDER listaelse
Rule 53    if_e -> IF expresion LLAVEIZQ expresion LLAVEDER listaelse ELSE LLAVEIZQ expresion LLAVEDER
Rule 54    listaelse -> listaelse elseif
Rule 55    listaelse -> elseif
Rule 56    elseif -> ELSE IF expresion LLAVEIZQ expresion LLAVEDER
Rule 57    expresion -> ENTERO
Rule 58    expresion -> DECIMAL
Rule 59    expresion -> ID
Rule 60    expresion -> CADENA
Rule 61    expresion -> TRUE
Rule 62    expresion -> FALSE
Rule 63    tipo_dato -> I64
Rule 64    tipo_dato -> F64
Rule 65    tipo_dato -> BOOL
Rule 66    tipo_dato -> CHAR
Rule 67    tipo_dato -> STR
Rule 68    tipo_dato -> STRING

Terminals, with rules where they appear

AND                  : 40
AS                   : 48 49
BOOL                 : 65
CADENA               : 60
CHAR                 : 66
COMA                 : 31 32
CORDER               : 
CORIZQ               : 
DECIMAL              : 58
DIFERENTE            : 39
DIVISION             : 29
DOBLEPT              : 15 16 31 31 32 32
ELSE                 : 21 22 51 53 56
ENTERO               : 57
F64                  : 32 49 64
FALSE                : 62
FN                   : 5
I64                  : 31 48 63
ID                   : 5 15 16 17 18 19 59
IF                   : 20 50 51 52 53 56
IGUAL                : 15 16 17 18 19
IGUALIGUAL           : 38
LET                  : 15 16 17 18
LLAVEDER             : 6 7 50 51 51 52 53 53 56
LLAVEIZQ             : 6 7 50 51 51 52 53 53 56
MAS                  : 26
MAYOR                : 34
MAYORIGUAL           : 36
MENOR                : 35
MENORIGUAL           : 37
MENOS                : 25 27
MODULO               : 30
MULTIPLICACION       : 28
MUT                  : 15 17
NOT                  : 14 42
OR                   : 41
PDER                 : 5 14 31 32 33 46 47
PIZQ                 : 5 14 31 32 33 46 47
POW                  : 31
POWF                 : 32
PRINTLN              : 14
PTCOMA               : 10 11 12
PUNTO                : 46 47
STR                  : 67
STRING               : 68
TOOWNED              : 47
TOSTRING             : 46
TRUE                 : 61
error                : 

Nonterminals, with rules where they appear

as                   : 44
asignacion           : 12
bloque               : 5 20 22
declaracion          : 11
else                 : 20
elseif               : 54 55
empty                : 23
expresion            : 14 15 16 17 18 19 20 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 46 47 48 49 50 50 51 51 51 52 52 53 53 53 56 56
funcion              : 4
funcion_struct       : 2 3
funciones_structs    : 1 2
if_e                 : 45
if_i                 : 13 21
init                 : 0
instruccion          : 8 9
instrucciones        : 7 8
listaelse            : 52 53 54
print                : 10
tipo_dato            : 15 16
tostring             : 43

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . funciones_structs
    (2) funciones_structs -> . funciones_structs funcion_struct
    (3) funciones_structs -> . funcion_struct
    (4) funcion_struct -> . funcion
    (5) funcion -> . FN ID PIZQ PDER bloque

    FN              shift and go to state 5

    init                           shift and go to state 1
    funciones_structs              shift and go to state 2
    funcion_struct                 shift and go to state 3
    funcion                        shift and go to state 4

state 1

    (0) S' -> init .



state 2

    (1) init -> funciones_structs .
    (2) funciones_structs -> funciones_structs . funcion_struct
    (4) funcion_struct -> . funcion
    (5) funcion -> . FN ID PIZQ PDER bloque

    $end            reduce using rule 1 (init -> funciones_structs .)
    FN              shift and go to state 5

    funcion_struct                 shift and go to state 6
    funcion                        shift and go to state 4

state 3

    (3) funciones_structs -> funcion_struct .

    FN              reduce using rule 3 (funciones_structs -> funcion_struct .)
    $end            reduce using rule 3 (funciones_structs -> funcion_struct .)


state 4

    (4) funcion_struct -> funcion .

    FN              reduce using rule 4 (funcion_struct -> funcion .)
    $end            reduce using rule 4 (funcion_struct -> funcion .)


state 5

    (5) funcion -> FN . ID PIZQ PDER bloque

    ID              shift and go to state 7


state 6

    (2) funciones_structs -> funciones_structs funcion_struct .

    FN              reduce using rule 2 (funciones_structs -> funciones_structs funcion_struct .)
    $end            reduce using rule 2 (funciones_structs -> funciones_structs funcion_struct .)


state 7

    (5) funcion -> FN ID . PIZQ PDER bloque

    PIZQ            shift and go to state 8


state 8

    (5) funcion -> FN ID PIZQ . PDER bloque

    PDER            shift and go to state 9


state 9

    (5) funcion -> FN ID PIZQ PDER . bloque
    (6) bloque -> . LLAVEIZQ LLAVEDER
    (7) bloque -> . LLAVEIZQ instrucciones LLAVEDER

    LLAVEIZQ        shift and go to state 11

    bloque                         shift and go to state 10

state 10

    (5) funcion -> FN ID PIZQ PDER bloque .

    FN              reduce using rule 5 (funcion -> FN ID PIZQ PDER bloque .)
    $end            reduce using rule 5 (funcion -> FN ID PIZQ PDER bloque .)


state 11

    (6) bloque -> LLAVEIZQ . LLAVEDER
    (7) bloque -> LLAVEIZQ . instrucciones LLAVEDER
    (8) instrucciones -> . instrucciones instruccion
    (9) instrucciones -> . instruccion
    (10) instruccion -> . print PTCOMA
    (11) instruccion -> . declaracion PTCOMA
    (12) instruccion -> . asignacion PTCOMA
    (13) instruccion -> . if_i
    (14) print -> . PRINTLN NOT PIZQ expresion PDER
    (15) declaracion -> . LET MUT ID DOBLEPT tipo_dato IGUAL expresion
    (16) declaracion -> . LET ID DOBLEPT tipo_dato IGUAL expresion
    (17) declaracion -> . LET MUT ID IGUAL expresion
    (18) declaracion -> . LET ID IGUAL expresion
    (19) asignacion -> . ID IGUAL expresion
    (20) if_i -> . IF expresion bloque else

    LLAVEDER        shift and go to state 12
    PRINTLN         shift and go to state 19
    LET             shift and go to state 20
    ID              shift and go to state 21
    IF              shift and go to state 22

    instrucciones                  shift and go to state 13
    instruccion                    shift and go to state 14
    print                          shift and go to state 15
    declaracion                    shift and go to state 16
    asignacion                     shift and go to state 17
    if_i                           shift and go to state 18

state 12

    (6) bloque -> LLAVEIZQ LLAVEDER .

    FN              reduce using rule 6 (bloque -> LLAVEIZQ LLAVEDER .)
    $end            reduce using rule 6 (bloque -> LLAVEIZQ LLAVEDER .)
    ELSE            reduce using rule 6 (bloque -> LLAVEIZQ LLAVEDER .)
    LLAVEDER        reduce using rule 6 (bloque -> LLAVEIZQ LLAVEDER .)
    PRINTLN         reduce using rule 6 (bloque -> LLAVEIZQ LLAVEDER .)
    LET             reduce using rule 6 (bloque -> LLAVEIZQ LLAVEDER .)
    ID              reduce using rule 6 (bloque -> LLAVEIZQ LLAVEDER .)
    IF              reduce using rule 6 (bloque -> LLAVEIZQ LLAVEDER .)


state 13

    (7) bloque -> LLAVEIZQ instrucciones . LLAVEDER
    (8) instrucciones -> instrucciones . instruccion
    (10) instruccion -> . print PTCOMA
    (11) instruccion -> . declaracion PTCOMA
    (12) instruccion -> . asignacion PTCOMA
    (13) instruccion -> . if_i
    (14) print -> . PRINTLN NOT PIZQ expresion PDER
    (15) declaracion -> . LET MUT ID DOBLEPT tipo_dato IGUAL expresion
    (16) declaracion -> . LET ID DOBLEPT tipo_dato IGUAL expresion
    (17) declaracion -> . LET MUT ID IGUAL expresion
    (18) declaracion -> . LET ID IGUAL expresion
    (19) asignacion -> . ID IGUAL expresion
    (20) if_i -> . IF expresion bloque else

    LLAVEDER        shift and go to state 23
    PRINTLN         shift and go to state 19
    LET             shift and go to state 20
    ID              shift and go to state 21
    IF              shift and go to state 22

    instruccion                    shift and go to state 24
    print                          shift and go to state 15
    declaracion                    shift and go to state 16
    asignacion                     shift and go to state 17
    if_i                           shift and go to state 18

state 14

    (9) instrucciones -> instruccion .

    LLAVEDER        reduce using rule 9 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 9 (instrucciones -> instruccion .)
    LET             reduce using rule 9 (instrucciones -> instruccion .)
    ID              reduce using rule 9 (instrucciones -> instruccion .)
    IF              reduce using rule 9 (instrucciones -> instruccion .)


state 15

    (10) instruccion -> print . PTCOMA

    PTCOMA          shift and go to state 25


state 16

    (11) instruccion -> declaracion . PTCOMA

    PTCOMA          shift and go to state 26


state 17

    (12) instruccion -> asignacion . PTCOMA

    PTCOMA          shift and go to state 27


state 18

    (13) instruccion -> if_i .

    LLAVEDER        reduce using rule 13 (instruccion -> if_i .)
    PRINTLN         reduce using rule 13 (instruccion -> if_i .)
    LET             reduce using rule 13 (instruccion -> if_i .)
    ID              reduce using rule 13 (instruccion -> if_i .)
    IF              reduce using rule 13 (instruccion -> if_i .)


state 19

    (14) print -> PRINTLN . NOT PIZQ expresion PDER

    NOT             shift and go to state 28


state 20

    (15) declaracion -> LET . MUT ID DOBLEPT tipo_dato IGUAL expresion
    (16) declaracion -> LET . ID DOBLEPT tipo_dato IGUAL expresion
    (17) declaracion -> LET . MUT ID IGUAL expresion
    (18) declaracion -> LET . ID IGUAL expresion

    MUT             shift and go to state 29
    ID              shift and go to state 30


state 21

    (19) asignacion -> ID . IGUAL expresion

    IGUAL           shift and go to state 31


state 22

    (20) if_i -> IF . expresion bloque else
    (25) expresion -> . MENOS expresion
    (26) expresion -> . expresion MAS expresion
    (27) expresion -> . expresion MENOS expresion
    (28) expresion -> . expresion MULTIPLICACION expresion
    (29) expresion -> . expresion DIVISION expresion
    (30) expresion -> . expresion MODULO expresion
    (31) expresion -> . I64 DOBLEPT DOBLEPT POW PIZQ expresion COMA expresion PDER
    (32) expresion -> . F64 DOBLEPT DOBLEPT POWF PIZQ expresion COMA expresion PDER
    (33) expresion -> . PIZQ expresion PDER
    (34) expresion -> . expresion MAYOR expresion
    (35) expresion -> . expresion MENOR expresion
    (36) expresion -> . expresion MAYORIGUAL expresion
    (37) expresion -> . expresion MENORIGUAL expresion
    (38) expresion -> . expresion IGUALIGUAL expresion
    (39) expresion -> . expresion DIFERENTE expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . tostring
    (44) expresion -> . as
    (45) expresion -> . if_e
    (57) expresion -> . ENTERO
    (58) expresion -> . DECIMAL
    (59) expresion -> . ID
    (60) expresion -> . CADENA
    (61) expresion -> . TRUE
    (62) expresion -> . FALSE
    (46) tostring -> . expresion PUNTO TOSTRING PIZQ PDER
    (47) tostring -> . expresion PUNTO TOOWNED PIZQ PDER
    (48) as -> . expresion AS I64
    (49) as -> . expresion AS F64
    (50) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER
    (51) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER ELSE LLAVEIZQ expresion LLAVEDER
    (52) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse
    (53) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse ELSE LLAVEIZQ expresion LLAVEDER

    MENOS           shift and go to state 34
    I64             shift and go to state 35
    F64             shift and go to state 37
    PIZQ            shift and go to state 36
    NOT             shift and go to state 38
    ENTERO          shift and go to state 42
    DECIMAL         shift and go to state 43
    ID              shift and go to state 44
    CADENA          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    IF              shift and go to state 32

    expresion                      shift and go to state 33
    tostring                       shift and go to state 39
    as                             shift and go to state 40
    if_e                           shift and go to state 41

state 23

    (7) bloque -> LLAVEIZQ instrucciones LLAVEDER .

    FN              reduce using rule 7 (bloque -> LLAVEIZQ instrucciones LLAVEDER .)
    $end            reduce using rule 7 (bloque -> LLAVEIZQ instrucciones LLAVEDER .)
    ELSE            reduce using rule 7 (bloque -> LLAVEIZQ instrucciones LLAVEDER .)
    LLAVEDER        reduce using rule 7 (bloque -> LLAVEIZQ instrucciones LLAVEDER .)
    PRINTLN         reduce using rule 7 (bloque -> LLAVEIZQ instrucciones LLAVEDER .)
    LET             reduce using rule 7 (bloque -> LLAVEIZQ instrucciones LLAVEDER .)
    ID              reduce using rule 7 (bloque -> LLAVEIZQ instrucciones LLAVEDER .)
    IF              reduce using rule 7 (bloque -> LLAVEIZQ instrucciones LLAVEDER .)


state 24

    (8) instrucciones -> instrucciones instruccion .

    LLAVEDER        reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    PRINTLN         reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    LET             reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 8 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 8 (instrucciones -> instrucciones instruccion .)


state 25

    (10) instruccion -> print PTCOMA .

    LLAVEDER        reduce using rule 10 (instruccion -> print PTCOMA .)
    PRINTLN         reduce using rule 10 (instruccion -> print PTCOMA .)
    LET             reduce using rule 10 (instruccion -> print PTCOMA .)
    ID              reduce using rule 10 (instruccion -> print PTCOMA .)
    IF              reduce using rule 10 (instruccion -> print PTCOMA .)


state 26

    (11) instruccion -> declaracion PTCOMA .

    LLAVEDER        reduce using rule 11 (instruccion -> declaracion PTCOMA .)
    PRINTLN         reduce using rule 11 (instruccion -> declaracion PTCOMA .)
    LET             reduce using rule 11 (instruccion -> declaracion PTCOMA .)
    ID              reduce using rule 11 (instruccion -> declaracion PTCOMA .)
    IF              reduce using rule 11 (instruccion -> declaracion PTCOMA .)


state 27

    (12) instruccion -> asignacion PTCOMA .

    LLAVEDER        reduce using rule 12 (instruccion -> asignacion PTCOMA .)
    PRINTLN         reduce using rule 12 (instruccion -> asignacion PTCOMA .)
    LET             reduce using rule 12 (instruccion -> asignacion PTCOMA .)
    ID              reduce using rule 12 (instruccion -> asignacion PTCOMA .)
    IF              reduce using rule 12 (instruccion -> asignacion PTCOMA .)


state 28

    (14) print -> PRINTLN NOT . PIZQ expresion PDER

    PIZQ            shift and go to state 48


state 29

    (15) declaracion -> LET MUT . ID DOBLEPT tipo_dato IGUAL expresion
    (17) declaracion -> LET MUT . ID IGUAL expresion

    ID              shift and go to state 49


state 30

    (16) declaracion -> LET ID . DOBLEPT tipo_dato IGUAL expresion
    (18) declaracion -> LET ID . IGUAL expresion

    DOBLEPT         shift and go to state 50
    IGUAL           shift and go to state 51


state 31

    (19) asignacion -> ID IGUAL . expresion
    (25) expresion -> . MENOS expresion
    (26) expresion -> . expresion MAS expresion
    (27) expresion -> . expresion MENOS expresion
    (28) expresion -> . expresion MULTIPLICACION expresion
    (29) expresion -> . expresion DIVISION expresion
    (30) expresion -> . expresion MODULO expresion
    (31) expresion -> . I64 DOBLEPT DOBLEPT POW PIZQ expresion COMA expresion PDER
    (32) expresion -> . F64 DOBLEPT DOBLEPT POWF PIZQ expresion COMA expresion PDER
    (33) expresion -> . PIZQ expresion PDER
    (34) expresion -> . expresion MAYOR expresion
    (35) expresion -> . expresion MENOR expresion
    (36) expresion -> . expresion MAYORIGUAL expresion
    (37) expresion -> . expresion MENORIGUAL expresion
    (38) expresion -> . expresion IGUALIGUAL expresion
    (39) expresion -> . expresion DIFERENTE expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . tostring
    (44) expresion -> . as
    (45) expresion -> . if_e
    (57) expresion -> . ENTERO
    (58) expresion -> . DECIMAL
    (59) expresion -> . ID
    (60) expresion -> . CADENA
    (61) expresion -> . TRUE
    (62) expresion -> . FALSE
    (46) tostring -> . expresion PUNTO TOSTRING PIZQ PDER
    (47) tostring -> . expresion PUNTO TOOWNED PIZQ PDER
    (48) as -> . expresion AS I64
    (49) as -> . expresion AS F64
    (50) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER
    (51) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER ELSE LLAVEIZQ expresion LLAVEDER
    (52) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse
    (53) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse ELSE LLAVEIZQ expresion LLAVEDER

    MENOS           shift and go to state 34
    I64             shift and go to state 35
    F64             shift and go to state 37
    PIZQ            shift and go to state 36
    NOT             shift and go to state 38
    ENTERO          shift and go to state 42
    DECIMAL         shift and go to state 43
    ID              shift and go to state 44
    CADENA          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    IF              shift and go to state 32

    expresion                      shift and go to state 52
    tostring                       shift and go to state 39
    as                             shift and go to state 40
    if_e                           shift and go to state 41

state 32

    (50) if_e -> IF . expresion LLAVEIZQ expresion LLAVEDER
    (51) if_e -> IF . expresion LLAVEIZQ expresion LLAVEDER ELSE LLAVEIZQ expresion LLAVEDER
    (52) if_e -> IF . expresion LLAVEIZQ expresion LLAVEDER listaelse
    (53) if_e -> IF . expresion LLAVEIZQ expresion LLAVEDER listaelse ELSE LLAVEIZQ expresion LLAVEDER
    (25) expresion -> . MENOS expresion
    (26) expresion -> . expresion MAS expresion
    (27) expresion -> . expresion MENOS expresion
    (28) expresion -> . expresion MULTIPLICACION expresion
    (29) expresion -> . expresion DIVISION expresion
    (30) expresion -> . expresion MODULO expresion
    (31) expresion -> . I64 DOBLEPT DOBLEPT POW PIZQ expresion COMA expresion PDER
    (32) expresion -> . F64 DOBLEPT DOBLEPT POWF PIZQ expresion COMA expresion PDER
    (33) expresion -> . PIZQ expresion PDER
    (34) expresion -> . expresion MAYOR expresion
    (35) expresion -> . expresion MENOR expresion
    (36) expresion -> . expresion MAYORIGUAL expresion
    (37) expresion -> . expresion MENORIGUAL expresion
    (38) expresion -> . expresion IGUALIGUAL expresion
    (39) expresion -> . expresion DIFERENTE expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . tostring
    (44) expresion -> . as
    (45) expresion -> . if_e
    (57) expresion -> . ENTERO
    (58) expresion -> . DECIMAL
    (59) expresion -> . ID
    (60) expresion -> . CADENA
    (61) expresion -> . TRUE
    (62) expresion -> . FALSE
    (46) tostring -> . expresion PUNTO TOSTRING PIZQ PDER
    (47) tostring -> . expresion PUNTO TOOWNED PIZQ PDER
    (48) as -> . expresion AS I64
    (49) as -> . expresion AS F64
    (50) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER
    (51) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER ELSE LLAVEIZQ expresion LLAVEDER
    (52) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse
    (53) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse ELSE LLAVEIZQ expresion LLAVEDER

    MENOS           shift and go to state 34
    I64             shift and go to state 35
    F64             shift and go to state 37
    PIZQ            shift and go to state 36
    NOT             shift and go to state 38
    ENTERO          shift and go to state 42
    DECIMAL         shift and go to state 43
    ID              shift and go to state 44
    CADENA          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    IF              shift and go to state 32

    expresion                      shift and go to state 53
    tostring                       shift and go to state 39
    as                             shift and go to state 40
    if_e                           shift and go to state 41

state 33

    (20) if_i -> IF expresion . bloque else
    (26) expresion -> expresion . MAS expresion
    (27) expresion -> expresion . MENOS expresion
    (28) expresion -> expresion . MULTIPLICACION expresion
    (29) expresion -> expresion . DIVISION expresion
    (30) expresion -> expresion . MODULO expresion
    (34) expresion -> expresion . MAYOR expresion
    (35) expresion -> expresion . MENOR expresion
    (36) expresion -> expresion . MAYORIGUAL expresion
    (37) expresion -> expresion . MENORIGUAL expresion
    (38) expresion -> expresion . IGUALIGUAL expresion
    (39) expresion -> expresion . DIFERENTE expresion
    (40) expresion -> expresion . AND expresion
    (41) expresion -> expresion . OR expresion
    (46) tostring -> expresion . PUNTO TOSTRING PIZQ PDER
    (47) tostring -> expresion . PUNTO TOOWNED PIZQ PDER
    (48) as -> expresion . AS I64
    (49) as -> expresion . AS F64
    (6) bloque -> . LLAVEIZQ LLAVEDER
    (7) bloque -> . LLAVEIZQ instrucciones LLAVEDER

    MAS             shift and go to state 55
    MENOS           shift and go to state 56
    MULTIPLICACION  shift and go to state 57
    DIVISION        shift and go to state 58
    MODULO          shift and go to state 59
    MAYOR           shift and go to state 60
    MENOR           shift and go to state 61
    MAYORIGUAL      shift and go to state 62
    MENORIGUAL      shift and go to state 63
    IGUALIGUAL      shift and go to state 64
    DIFERENTE       shift and go to state 65
    AND             shift and go to state 66
    OR              shift and go to state 67
    PUNTO           shift and go to state 68
    AS              shift and go to state 69
    LLAVEIZQ        shift and go to state 11

    bloque                         shift and go to state 54

state 34

    (25) expresion -> MENOS . expresion
    (25) expresion -> . MENOS expresion
    (26) expresion -> . expresion MAS expresion
    (27) expresion -> . expresion MENOS expresion
    (28) expresion -> . expresion MULTIPLICACION expresion
    (29) expresion -> . expresion DIVISION expresion
    (30) expresion -> . expresion MODULO expresion
    (31) expresion -> . I64 DOBLEPT DOBLEPT POW PIZQ expresion COMA expresion PDER
    (32) expresion -> . F64 DOBLEPT DOBLEPT POWF PIZQ expresion COMA expresion PDER
    (33) expresion -> . PIZQ expresion PDER
    (34) expresion -> . expresion MAYOR expresion
    (35) expresion -> . expresion MENOR expresion
    (36) expresion -> . expresion MAYORIGUAL expresion
    (37) expresion -> . expresion MENORIGUAL expresion
    (38) expresion -> . expresion IGUALIGUAL expresion
    (39) expresion -> . expresion DIFERENTE expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . tostring
    (44) expresion -> . as
    (45) expresion -> . if_e
    (57) expresion -> . ENTERO
    (58) expresion -> . DECIMAL
    (59) expresion -> . ID
    (60) expresion -> . CADENA
    (61) expresion -> . TRUE
    (62) expresion -> . FALSE
    (46) tostring -> . expresion PUNTO TOSTRING PIZQ PDER
    (47) tostring -> . expresion PUNTO TOOWNED PIZQ PDER
    (48) as -> . expresion AS I64
    (49) as -> . expresion AS F64
    (50) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER
    (51) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER ELSE LLAVEIZQ expresion LLAVEDER
    (52) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse
    (53) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse ELSE LLAVEIZQ expresion LLAVEDER

    MENOS           shift and go to state 34
    I64             shift and go to state 35
    F64             shift and go to state 37
    PIZQ            shift and go to state 36
    NOT             shift and go to state 38
    ENTERO          shift and go to state 42
    DECIMAL         shift and go to state 43
    ID              shift and go to state 44
    CADENA          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    IF              shift and go to state 32

    expresion                      shift and go to state 70
    tostring                       shift and go to state 39
    as                             shift and go to state 40
    if_e                           shift and go to state 41

state 35

    (31) expresion -> I64 . DOBLEPT DOBLEPT POW PIZQ expresion COMA expresion PDER

    DOBLEPT         shift and go to state 71


state 36

    (33) expresion -> PIZQ . expresion PDER
    (25) expresion -> . MENOS expresion
    (26) expresion -> . expresion MAS expresion
    (27) expresion -> . expresion MENOS expresion
    (28) expresion -> . expresion MULTIPLICACION expresion
    (29) expresion -> . expresion DIVISION expresion
    (30) expresion -> . expresion MODULO expresion
    (31) expresion -> . I64 DOBLEPT DOBLEPT POW PIZQ expresion COMA expresion PDER
    (32) expresion -> . F64 DOBLEPT DOBLEPT POWF PIZQ expresion COMA expresion PDER
    (33) expresion -> . PIZQ expresion PDER
    (34) expresion -> . expresion MAYOR expresion
    (35) expresion -> . expresion MENOR expresion
    (36) expresion -> . expresion MAYORIGUAL expresion
    (37) expresion -> . expresion MENORIGUAL expresion
    (38) expresion -> . expresion IGUALIGUAL expresion
    (39) expresion -> . expresion DIFERENTE expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . tostring
    (44) expresion -> . as
    (45) expresion -> . if_e
    (57) expresion -> . ENTERO
    (58) expresion -> . DECIMAL
    (59) expresion -> . ID
    (60) expresion -> . CADENA
    (61) expresion -> . TRUE
    (62) expresion -> . FALSE
    (46) tostring -> . expresion PUNTO TOSTRING PIZQ PDER
    (47) tostring -> . expresion PUNTO TOOWNED PIZQ PDER
    (48) as -> . expresion AS I64
    (49) as -> . expresion AS F64
    (50) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER
    (51) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER ELSE LLAVEIZQ expresion LLAVEDER
    (52) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse
    (53) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse ELSE LLAVEIZQ expresion LLAVEDER

    MENOS           shift and go to state 34
    I64             shift and go to state 35
    F64             shift and go to state 37
    PIZQ            shift and go to state 36
    NOT             shift and go to state 38
    ENTERO          shift and go to state 42
    DECIMAL         shift and go to state 43
    ID              shift and go to state 44
    CADENA          shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47
    IF              shift and go to state 32

    expresion                      shift and go to state 72
    tostring                       shift and go to state 39
    as                             shift and go to state 40
    if_e                           shift and go to state 41

state 37

    (32) expresion -> F64 . DOBLEPT DOBLEPT POWF PIZQ expresion COMA expresion PDER

    DOBLEPT         shift and go to state 73


state 38

    (42) expresion -> NOT . expresion
    (25) expresion -> . MENOS expresion
    (26) expresion -> . expresion MAS expresion
    (27) expresion -> . expresion MENOS expresion
    (28) expresion -> . expresion MULTIPLICACION expresion
    (29) expresion -> . expresion DIVISION expresion
    (30) expresion -> . expresion MODULO expresion
    (31) expresion -> . I64 DOBLEPT DOBLEPT POW PIZQ expresion COMA expresion PDER
    (32) expresion -> . F64 DOBLEPT DOBLEPT POWF PIZQ expresion COMA expresion PDER
    (33) expresion -> . PIZQ expresion PDER
    (34) expresion -> . expresion MAYOR expresion
    (35) expresion -> . expresion MENOR expresion
    (36) expresion -> . expresion MAYORIGUAL expresion
    (37) expresion -> . expresion MENORIGUAL expresion
    (38) expresion -> . expresion IGUALIGUAL expresion
    (39) expresion -> . expresion DIFERENTE expresion
    (40) expresion -> . expresion AND expresion
    (41) expresion -> . expresion OR expresion
    (42) expresion -> . NOT expresion
    (43) expresion -> . tostring
    (44) expresion -> . as
    (45) expresion -> . if_e
    (57) expresion -> . ENTERO
    (58) expresion -> . DECIMAL
    (59) expresion -> . ID
    (60) expresion -> . CADENA
    (61) expresion -> . TRUE
    (62) expresion -> . FALSE
    (46) tostring -> . expresion PUNTO TOSTRING PIZQ PDER
    (47) tostring -> . expresion PUNTO TOOWNED PIZQ PDER
    (48) as -> . expresion AS I64
    (49) as -> . expresion AS F64
    (50) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER
    (51) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER ELSE LLAVEIZQ expresion LLAVEDER
    (52) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse
    (53) if_e -> . IF expresion LLAVEIZQ expresion LLAVEDER listaelse ELSE LLAVEIZQ expresion LLAVEDER
